--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -13,3 +13,14 @@
   color: rgba(255, 255, 255, 0.75);
   font-size: 24px;
 }
+.nav-link {
+  display: inline-block;
+  padding: 0.5em 1em;
+  color: rgba(255, 255, 255, 0.835);
+  font-weight: bold;
+  text-decoration: none;
+}
+.nav-link-active {
+  color: #fff;
+  border-bottom: 2px solid;
+}
